--- a/src/main/resources/fxml/profilo.fxml
+++ b/src/main/resources/fxml/profilo.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.206" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerProfilo">
+<SplitPane dividerPositions="0.206" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserProfilo">
   <items>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
@@ -46,8 +46,8 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="48.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
-            <Label fx:id="usernameLabel" prefHeight="17.0" prefWidth="90.0" text="sis" textFill="#f27777" wrapText="true" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
+            <ChoiceBox fx:id="sezioneChoicebox" layoutX="609.0" layoutY="48.0" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: transparent;" />
+            <Label fx:id="usernameLabel" prefHeight="17.0" prefWidth="126.0" text="sis" textFill="#f27777" wrapText="true" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
