--- a/src/main/resources/fxml/registrazioneUtente.fxml
+++ b/src/main/resources/fxml/registrazioneUtente.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -103,7 +104,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <ComboBox fx:id="pagamentoComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ChoiceBox fx:id="pagamentoChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Label layoutX="230.0" layoutY="74.0" prefHeight="34.0" prefWidth="181.0" text="REGISTRAZIONE" textFill="#f27777" AnchorPane.topAnchor="69.0">
@@ -116,17 +117,9 @@
             <Image url="@../img/logo.png" />
          </image>
       </ImageView>
-      <Label layoutX="381.0" layoutY="383.0" prefHeight="21.0" prefWidth="314.0" text="Desidera l'attivazione della tessera fedeltà?" AnchorPane.leftAnchor="430.0">
+      <Label layoutX="381.0" layoutY="383.0" prefHeight="51.0" prefWidth="160.0" text="Desidera l'attivazione &#10;della tessera fedeltà?" wrapText="true" AnchorPane.leftAnchor="430.0">
          <font>
             <Font size="15.0" />
-         </font>
-      </Label>
-      <RadioButton fx:id="siRadioButton" layoutX="388.0" layoutY="414.0" mnemonicParsing="false" text="SI" AnchorPane.leftAnchor="438.0" />
-      <RadioButton fx:id="noRadioButton" layoutX="443.0" layoutY="414.0" mnemonicParsing="false" text="NO" AnchorPane.leftAnchor="493.0" />
-      <Label layoutX="540.0" layoutY="410.0" prefHeight="26.0" prefWidth="92.0" text="Tessara Fedeltà:" AnchorPane.leftAnchor="590.0" />
-      <Label fx:id="tesseraFedeltàLabel" layoutX="630.0" layoutY="410.0" prefHeight="17.0" prefWidth="87.0" style="-fx-background-color: ecfbfa;" AnchorPane.leftAnchor="680.0">
-         <font>
-            <Font size="16.0" />
          </font>
       </Label>
       <Button fx:id="salvaButton" layoutX="627.0" layoutY="511.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Salva" textAlignment="CENTER">
@@ -134,5 +127,10 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
+      <CheckBox fx:id="attivaCheckbox" layoutX="614.0" layoutY="396.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Attiva">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </CheckBox>
    </children>
 </AnchorPane>
