--- a/src/main/resources/fxml/spesaResponsabile2.fxml
+++ b/src/main/resources/fxml/spesaResponsabile2.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.206" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerSpeseResponsabili">
+<SplitPane dividerPositions="0.206" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerRespSpese">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
@@ -50,7 +50,7 @@
             </Label>
             <ListView fx:id="speseListView" layoutX="181.0" layoutY="42.0" prefHeight="424.0" prefWidth="167.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="550.0" AnchorPane.topAnchor="42.0" />
             <ListView fx:id="elementiListView" layoutX="357.0" layoutY="42.0" prefHeight="424.0" prefWidth="393.0" />
-            <Label layoutX="336.0" layoutY="14.0" prefHeight="17.0" prefWidth="108.0" text="ELEMENTI" textFill="#f27777">
+            <Label layoutX="357.0" layoutY="14.0" prefHeight="17.0" prefWidth="108.0" text="ELEMENTI" textFill="#f27777">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
