--- a/src/main/resources/fxml/login_page.fxml
+++ b/src/main/resources/fxml/login_page.fxml
@@ -12,17 +12,17 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="711.0" style="-fx-background-color: #ddfaf7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerLoginPage">
    <children>
-      <Button fx:id="loginButton" defaultButton="true" layoutX="384.0" layoutY="166.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="251.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Login" textAlignment="CENTER" AnchorPane.leftAnchor="384.0" AnchorPane.rightAnchor="76.0">
+      <Button fx:id="loginButton" defaultButton="true" layoutX="377.0" layoutY="166.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="258.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Login" textAlignment="CENTER" AnchorPane.leftAnchor="377.0" AnchorPane.rightAnchor="76.0">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Label layoutX="408.0" layoutY="79.0" prefHeight="37.0" prefWidth="46.0" text="Email" textAlignment="RIGHT">
+      <Label fx:id="titleLabel" layoutX="408.0" layoutY="79.0" prefHeight="37.0" prefWidth="69.0" text="Email" textAlignment="RIGHT" wrapText="true" AnchorPane.rightAnchor="265.0">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="383.0" layoutY="116.0" prefHeight="37.0" prefWidth="69.0" text="Password">
+      <Label layoutX="376.0" layoutY="116.0" prefHeight="37.0" prefWidth="76.0" text="Password">
          <font>
             <Font size="15.0" />
          </font>
