--- a/src/main/resources/fxml/spesaResponsabile2.fxml
+++ b/src/main/resources/fxml/spesaResponsabile2.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -61,36 +62,36 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="761.0" layoutY="42.0" prefHeight="17.0" prefWidth="47.0" text="STATO:" textFill="#f27777">
+            <Label layoutX="761.0" layoutY="42.0" prefHeight="17.0" prefWidth="47.0" text="STATO:" textFill="#f27777" AnchorPane.topAnchor="42.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="statoLabel" layoutX="808.0" layoutY="59.0" text="stato" />
-            <Label layoutX="761.0" layoutY="94.0" prefHeight="17.0" prefWidth="123.0" text="Metodo pagamento:" textFill="#f27777">
+            <Label fx:id="statoLabel" layoutX="785.0" layoutY="56.0" text="-" AnchorPane.topAnchor="56.0" />
+            <Label layoutX="761.0" layoutY="142.0" prefHeight="17.0" prefWidth="123.0" text="Metodo pagamento:" textFill="#f27777" AnchorPane.topAnchor="142.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="pagamentoLabel" layoutX="808.0" layoutY="118.0" text="stato" />
-            <Label layoutX="761.0" layoutY="141.0" prefHeight="17.0" prefWidth="123.0" text="Data di consegna:" textFill="#f27777">
+            <Label fx:id="pagamentoLabel" layoutX="785.0" layoutY="159.0" text="-" AnchorPane.topAnchor="159.0" />
+            <Label layoutX="761.0" layoutY="192.0" prefHeight="17.0" prefWidth="123.0" text="Data di consegna:" textFill="#f27777" AnchorPane.topAnchor="192.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="dataLabel" layoutX="808.0" layoutY="166.0" text="stato" />
-            <Label layoutX="761.0" layoutY="190.0" prefHeight="17.0" prefWidth="123.0" text="Fascia oraria:" textFill="#f27777">
+            <Label fx:id="dataLabel" layoutX="785.0" layoutY="209.0" text="-" AnchorPane.topAnchor="209.0" />
+            <Label layoutX="761.0" layoutY="242.0" prefHeight="17.0" prefWidth="123.0" text="Fascia oraria:" textFill="#f27777" AnchorPane.topAnchor="242.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="761.0" layoutY="237.0" prefHeight="17.0" prefWidth="123.0" text="Costo totale:" textFill="#f27777">
+            <Label layoutX="761.0" layoutY="292.0" prefHeight="17.0" prefWidth="123.0" text="Costo totale:" textFill="#f27777" AnchorPane.topAnchor="292.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="orarioLabel" layoutX="808.0" layoutY="207.0" text="stato" />
-            <Label fx:id="costoLabel" layoutX="808.0" layoutY="254.0" text="stato" />
+            <Label fx:id="orarioLabel" layoutX="785.0" layoutY="259.0" text="-" AnchorPane.topAnchor="259.0" />
+            <Label fx:id="costoLabel" layoutX="785.0" layoutY="309.0" text="-" AnchorPane.topAnchor="309.0" />
             <Button fx:id="consegnaButton" disable="true" layoutX="14.0" layoutY="395.0" mnemonicParsing="false" onAction="#consegnaButtonHandler" prefHeight="35.0" prefWidth="149.0" style="-fx-background-color: #f27777;" text="Consegna">
                <font>
                   <Font size="14.0" />
@@ -110,6 +111,13 @@
                   <Font size="14.0" />
                </font>
             </Button>
+            <Separator layoutX="-11.0" layoutY="276.0" prefHeight="3.0" prefWidth="157.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="733.0" />
+            <Label layoutX="761.0" layoutY="342.0" prefHeight="17.0" prefWidth="123.0" text="Utente:" textFill="#f27777" AnchorPane.topAnchor="92.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="utenteLabel" layoutX="785.0" layoutY="109.0" text="-" AnchorPane.topAnchor="109.0" />
          </children>
       </AnchorPane>
   </items>
