--- a/src/main/resources/fxml/speseUtente.fxml
+++ b/src/main/resources/fxml/speseUtente.fxml
@@ -54,36 +54,36 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="742.0" layoutY="42.0" prefHeight="17.0" prefWidth="47.0" text="STATO:" textFill="#f27777">
+            <Label layoutX="742.0" layoutY="42.0" prefHeight="17.0" prefWidth="47.0" text="STATO:" textFill="#f27777" AnchorPane.topAnchor="42.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="statoLabel" layoutX="789.0" layoutY="59.0" text="stato" />
-            <Label layoutX="742.0" layoutY="94.0" prefHeight="17.0" prefWidth="123.0" text="Metodo pagamento:" textFill="#f27777">
+            <Label fx:id="statoLabel" layoutX="789.0" layoutY="59.0" text="-" />
+            <Label layoutX="742.0" layoutY="94.0" prefHeight="17.0" prefWidth="123.0" text="Metodo pagamento:" textFill="#f27777" AnchorPane.topAnchor="90.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="pagamentoLabel" layoutX="789.0" layoutY="118.0" text="stato" />
-            <Label layoutX="742.0" layoutY="141.0" prefHeight="17.0" prefWidth="123.0" text="Data di consegna:" textFill="#f27777">
+            <Label fx:id="pagamentoLabel" layoutX="789.0" layoutY="118.0" text="-" AnchorPane.topAnchor="110.0" />
+            <Label layoutX="742.0" layoutY="141.0" prefHeight="17.0" prefWidth="123.0" text="Data di consegna:" textFill="#f27777" AnchorPane.topAnchor="140.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="dataLabel" layoutX="789.0" layoutY="166.0" text="stato" />
-            <Label layoutX="742.0" layoutY="190.0" prefHeight="17.0" prefWidth="123.0" text="Fascia oraria:" textFill="#f27777">
+            <Label fx:id="dataLabel" layoutX="789.0" layoutY="166.0" text="-" AnchorPane.topAnchor="160.0" />
+            <Label layoutX="742.0" layoutY="190.0" prefHeight="17.0" prefWidth="123.0" text="Fascia oraria:" textFill="#f27777" AnchorPane.topAnchor="190.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="742.0" layoutY="237.0" prefHeight="17.0" prefWidth="123.0" text="Costo totale:" textFill="#f27777">
+            <Label layoutX="742.0" layoutY="237.0" prefHeight="17.0" prefWidth="123.0" text="Costo totale:" textFill="#f27777" AnchorPane.topAnchor="240.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="orarioLabel" layoutX="789.0" layoutY="207.0" text="stato" />
-            <Label fx:id="costoLabel" layoutX="789.0" layoutY="254.0" text="stato" />
+            <Label fx:id="orarioLabel" layoutX="789.0" layoutY="207.0" text="-" AnchorPane.topAnchor="210.0" />
+            <Label fx:id="costoLabel" layoutX="789.0" layoutY="254.0" text="-" AnchorPane.topAnchor="260.0" />
          </children>
       </AnchorPane>
   </items>
