--- a/src/main/resources/fxml/carrello.fxml
+++ b/src/main/resources/fxml/carrello.fxml
@@ -46,9 +46,9 @@
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
             <Spinner fx:id="quantitySpinner" editable="true" layoutX="797.0" layoutY="17.0" prefHeight="14.0" prefWidth="97.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="17.0" />
-            <Label layoutX="714.0" layoutY="21.0" text="QUANTITA'" textFill="#f27777" AnchorPane.rightAnchor="112.66666666666663" AnchorPane.topAnchor="21.0">
+            <Label layoutX="725.0" layoutY="11.0" text="Modifica &#10;quantità" textAlignment="CENTER" textFill="#f27777" AnchorPane.leftAnchor="725.0" AnchorPane.rightAnchor="119.0" AnchorPane.topAnchor="11.0">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font size="13.0" />
                </font>
             </Label>
             <ListView fx:id="carrelloListView" layoutX="-1.0" prefHeight="641.0" prefWidth="1044.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="5.0" />
@@ -58,7 +58,7 @@
                </font></Button>
             <Label layoutX="717.0" layoutY="330.0" text="Costo totale" />
             <Label fx:id="costoTotaleLabel" layoutX="801.0" layoutY="330.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
-            <Button fx:id="eliminaButton" layoutX="734.0" layoutY="62.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="137.0" style="-fx-background-color: #f27777;" text="Elimina" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="62.0">
+            <Button fx:id="eliminaButton" layoutX="732.0" layoutY="79.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="137.0" style="-fx-background-color: #f27777;" text="Elimina dal carrello" AnchorPane.bottomAnchor="357.6666666666667" AnchorPane.rightAnchor="28.66666666666663" AnchorPane.topAnchor="80.0">
                <font>
                   <Font size="14.0" />
                </font></Button>
@@ -66,9 +66,10 @@
             <Label fx:id="puntiSpesaLabel" layoutX="796.0" layoutY="349.0" prefHeight="17.0" prefWidth="84.0" text="puntispesa" textAlignment="RIGHT" wrapText="true" AnchorPane.topAnchor="351.0" />
             <Label layoutX="719.0" layoutY="372.0" text="Saldo punti" />
             <Label fx:id="saldoPuntiLabel" layoutX="799.0" layoutY="372.0" prefHeight="17.0" prefWidth="84.0" text="saldopunti" textAlignment="RIGHT" wrapText="true" />
-            <Separator layoutX="712.0" layoutY="112.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="8.0" />
+            <Separator layoutX="706.0" layoutY="139.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="12.0" />
             <Separator layoutX="712.0" layoutY="315.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="8.0" />
             <Separator layoutX="702.0" layoutY="402.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="8.0" />
+            <Separator layoutX="706.0" layoutY="58.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.topAnchor="60.0" />
          </children></AnchorPane>
   </items>
 </SplitPane>
