--- a/src/main/resources/fxml/homeResponsanili.fxml
+++ b/src/main/resources/fxml/homeResponsanili.fxml
@@ -87,8 +87,8 @@
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="470.0" prefWidth="800.0" style="-fx-background-color: #ddfaf7;">
                      <children>
                         <ListView fx:id="itemListView" layoutX="-78.0" prefHeight="460.0" prefWidth="438.0" style="-fx-background-color: #ecfbfa;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="5.0" />
-                        <Spinner fx:id="quantitySpinner" editable="true" layoutX="608.0" layoutY="22.0" prefHeight="25.0" prefWidth="60.0" AnchorPane.rightAnchor="23.33333333333337" AnchorPane.topAnchor="22.0" />
-                        <Label layoutX="521.0" layoutY="25.0" text="QUANTITA'" textFill="#f27777" AnchorPane.rightAnchor="99.0">
+                        <Spinner fx:id="quantitySpinner" layoutX="608.0" layoutY="22.0" prefHeight="25.0" prefWidth="82.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="22.0" />
+                        <Label layoutX="505.00000000000006" layoutY="25.0" text="QUANTITA'" textFill="#f27777" AnchorPane.rightAnchor="115.0">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font>
