--- a/src/main/resources/fxml/registrazioneUtente.fxml
+++ b/src/main/resources/fxml/registrazioneUtente.fxml
@@ -66,7 +66,8 @@
             <TextField fx:id="indirizzoTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="telefonoTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label fx:id="capLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <ComboBox fx:id="cittaComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="cittaTextField" disable="true" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: ecfbfa;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="cittaComboBox" focusTraversable="false" prefWidth="150.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <GridPane layoutX="380.0" layoutY="170.0" prefHeight="198.0" prefWidth="294.0" AnchorPane.leftAnchor="430.0">
