--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -21,12 +21,12 @@
          <children>
             <ImageView fx:id="carrelloImageView" fitHeight="70.0" fitWidth="70.0" layoutX="480.0" layoutY="10.0" onMousePressed="#carrelloButtonHandler" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
                <image>
-                  <Image url="@../img/carrello.jpg" />
+                  <Image url="@../icons/carrello.jpg" />
                </image>
             </ImageView>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="127.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="36.5" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="36.5">
                <image>
-                  <Image url="@../img/utente.jpg" />
+                  <Image url="@../icons/utente.jpg" />
                </image>
             </ImageView>
             <Label fx:id="usernameLabel" layoutX="174.0" layoutY="124.0" prefHeight="17.0" prefWidth="90.0" text="sis" textFill="#f27777" wrapText="true" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
@@ -37,7 +37,7 @@
             <Label fx:id="carrelloCountLabel" layoutX="1245.0" layoutY="72.0" text="0" textAlignment="RIGHT" AnchorPane.rightAnchor="20.0" />
             <ImageView fitHeight="116.0" fitWidth="181.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
                <image>
-                  <Image url="@../img/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <Label layoutX="451.0" layoutY="110.0" text="Ciao, " textFill="#f27777" AnchorPane.leftAnchor="620.0" AnchorPane.topAnchor="51.0">
