--- a/src/main/resources/fxml/login_page.fxml
+++ b/src/main/resources/fxml/login_page.fxml
@@ -37,7 +37,7 @@
       <CheckBox fx:id="personaleCheckBox" alignment="CENTER_RIGHT" layoutX="594.0" layoutY="14.0" mnemonicParsing="false" text="Amministratore" textAlignment="CENTER" />
       <ImageView fitHeight="300.0" fitWidth="305.0" layoutX="30.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="381.0">
          <image>
-            <Image url="@../img/logo.png" />
+            <Image url="@../icons/logo.png" />
          </image>
       </ImageView>
       <Label layoutX="408.0" layoutY="237.0" text="Non hai un account? " />
