--- a/src/main/resources/fxml/modificaUtente.fxml
+++ b/src/main/resources/fxml/modificaUtente.fxml
@@ -21,12 +21,12 @@
          <children>
             <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="18.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
                <image>
-                  <Image url="@../img/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="603.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="36.5" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="36.5">
                <image>
-                  <Image url="@../img/utente.jpg" />
+                  <Image url="@../icons/utente.jpg" />
                </image>
             </ImageView>
             <Label layoutX="169.0" layoutY="41.0" prefHeight="34.0" prefWidth="332.0" text="MODIFICA DATI ANAGRAFICI" textFill="#f27777" underline="true">
@@ -36,7 +36,7 @@
             </Label>
             <ImageView fx:id="carrelloImageView" fitHeight="70.0" fitWidth="70.0" layoutX="792.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
                <image>
-                  <Image url="@../img/carrello.jpg" />
+                  <Image url="@../icons/carrello.jpg" />
                </image>
             </ImageView>
             <Label text="Ciao, " textFill="#f27777" AnchorPane.leftAnchor="620.0" AnchorPane.topAnchor="51.0">
