--- a/src/main/resources/fxml/spesaResponsabile2.fxml
+++ b/src/main/resources/fxml/spesaResponsabile2.fxml
@@ -18,12 +18,12 @@
          <children>
             <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="18.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
                <image>
-                  <Image url="@../img/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="603.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="36.5" AnchorPane.rightAnchor="155.0" AnchorPane.topAnchor="36.5">
                <image>
-                  <Image url="@../img/utente.jpg" />
+                  <Image url="@../icons/utente.jpg" />
                </image>
             </ImageView>
             <Button layoutX="548.0" layoutY="43.0" mnemonicParsing="false" onAction="#homeButtonHandler" prefHeight="35.0" prefWidth="113.0" style="-fx-background-color: #f27777;" text="Home" AnchorPane.bottomAnchor="41.666666666666664" AnchorPane.leftAnchor="548.0" AnchorPane.topAnchor="43.0">
