--- a/src/main/resources/fxml/speseUtente.fxml
+++ b/src/main/resources/fxml/speseUtente.fxml
@@ -15,17 +15,17 @@
          <children>
             <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="24.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
                <image>
-                  <Image url="@../img/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carrelloImageView" fitHeight="70.0" fitWidth="70.0" layoutX="480.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
                <image>
-                  <Image url="@../img/carrello.jpg" />
+                  <Image url="@../icons/carrello.jpg" />
                </image>
             </ImageView>
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="127.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="36.0" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="36.0">
                <image>
-                  <Image url="@../img/utente.jpg" />
+                  <Image url="@../icons/utente.jpg" />
                </image>
             </ImageView>
             <Label fx:id="usernameLabel" layoutX="174.0" layoutY="111.0" prefHeight="17.0" prefWidth="108.0" text="NOMEUTENTE" textFill="#f27777" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
