--- a/src/main/resources/fxml/modificaUtente.fxml
+++ b/src/main/resources/fxml/modificaUtente.fxml
@@ -118,7 +118,6 @@
                   <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <TextField fx:id="mailTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" />
                   <PasswordField fx:id="pswTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <PasswordField fx:id="controllopswTextField" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Label prefHeight="17.0" prefWidth="80.0" text="e-mail">
@@ -142,6 +141,7 @@
                      </font>
                   </Label>
                   <ComboBox fx:id="pagamentoComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="mailLabel" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: ecfbfa;" GridPane.columnIndex="1" />
                </children>
             </GridPane>
             <Button fx:id="modificaButton" layoutX="624.0" layoutY="347.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="111.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Salva" textAlignment="CENTER" AnchorPane.rightAnchor="140.0">
