--- a/src/main/resources/fxml/homeResponsanili.fxml
+++ b/src/main/resources/fxml/homeResponsanili.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -40,11 +41,7 @@
                </font>
             </Button>
             <Label layoutX="754.0" layoutY="51.0" text="Ciao," textFill="#f27777" AnchorPane.leftAnchor="750.0" AnchorPane.topAnchor="51.0" />
-            <Button layoutX="393.0" layoutY="40.0" mnemonicParsing="false" onAction="#logoutButtonHandler" prefHeight="35.0" prefWidth="113.0" style="-fx-background-color: #f27777;" text="Logout" AnchorPane.bottomAnchor="43.666666666666664" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="43.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
+            <ChoiceBox fx:id="sezioneChoicebox" layoutX="752.0" layoutY="47.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="47.0" />
          </children></AnchorPane>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
